--- a/style.css
+++ b/style.css
@@ -15,7 +15,25 @@ body
 
 }
 
-.jumbotron
+.main_container .jumbotron
+{
+	text-align: left;
+
+	padding: 550px 50px 100px 50px;
+	background-color: #ffd1c3;
+	background-image: url('ksg.jpg');
+	background-size:cover;
+	background-repeat: no-repeat;
+}
+
+.album_container
+{
+	width:80%;
+	padding-top: 90px;
+
+}
+
+.album_container .jumbotron
 {
 	text-align: left;
 
