--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ body
 
 	padding: 550px 50px 100px 50px;
 	background-color: #ffd1c3;
-	background-image: url('ksg.jpg');
+	background-image: url('ksg2.jpg');
 	background-size:cover;
 	background-repeat: no-repeat;
 }
