--- a/style.css
+++ b/style.css
@@ -44,6 +44,23 @@ body
 	background-repeat: no-repeat;
 }
 
+.gallery_container
+{
+	width:80%;
+	padding-top: 90px;
+
+}
+
+.gallery_container .jumbotron
+{
+	text-align: left;
+
+	padding: 550px 50px 100px 50px;
+	background-color: #ffd1c3;
+	background-image: url('ksg3.jpg');
+	background-size:cover;
+	background-repeat: no-repeat;
+}
  .jumbotron .col-sm-9 h1
 {
 	padding-top: 10px;
